fixed #20 button copy dark mode.

--- a/assets/scss/common/_dark.scss
+++ b/assets/scss/common/_dark.scss
@@ -38,7 +38,29 @@ $navbar-dark-active-color:          $link-color-dark;
 [data-dark-mode] body .btn-primary {
   @include button-variant($button-color-dark, $button-color-dark);
 
-  color: $body-bg-dark !important;
+  color: $body-bg-dark;
+}
+
+[data-dark-mode] .btn-copy {
+  transition: opacity 0.3s ease-in-out;
+  visibility: hidden !important;
+  position: absolute;
+  right: 0.25rem;
+  top: 0.25rem;
+  z-index: 10;
+  font-family: $font-family-sans-serif;
+  font-size: $font-size-sm;
+  padding: 0.25rem 0.5rem;
+  color: $body-bg-dark;
+  background-color: $button-color-dark;
+  border-color: $button-color-dark;
+}
+
+[data-dark-mode] .btn-copy:hover,
+[data-dark-mode] .btn-copy:focus {
+  color: $body-bg-dark;
+  background-color: $button-color-dark;
+  border-color: $button-color-dark;
 }
 
 [data-dark-mode] body .btn-outline-primary {
